--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^4.13.1",
     "react": "next",
     "react-dom": "next",
+    "react-helmet": "^5.2.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
