change badly to show off

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://lots-of-reddits.herokuapp.com/api/reddit/subreddit/EarthPorn
-REACT_APP_NAME="Earth Porn"
+REACT_APP_API_URL=https://lots-of-reddits.herokuapp.com/api/reddit/
+REACT_APP_NAME="Lots of Reddits"
